# jonesy

./: .gitignore  BENCHMARK.md  CLAUDE.md  Cargo.toml  MACOS_REGRESSION_INVESTIGATION.md  Makefile  PHASE6_HANDOFF.md  PHASE6_PLAN.md  README.md  SCENARIOS.md  action.yml  benchmark.sh  benchmark_comparison.md  benchmark_flow_workspace.md  benchmark_results_Darwin-arm64_20260411_195054.txt  benchmark_results_Darwin-arm64_20260411_203626.txt  benchmark_results_Linux-aarch64_20260411_195812.txt  benchmark_results_Linux-aarch64_20260411_202239.txt  benchmark_results_Linux-aarch64_20260411_214418.txt  codecov.yml  description.md  features_and_tests.md  notes.md
.github/: problem-matcher.json
.github/workflows/: build_and_test.yml  checks.yml  ci.yml  coverage.yml  jonesy-example.yml  release.yml  test-action.yml
docs/: .gitignore  CNAME  _config.yml  index.md  lsp.md
docs/_layouts/: default.html
docs/benchmarks/: BENCHMARKS.md  BENCHMARK_COMPARISON_RESULTS.md  INSTRUCTIONS_FOR_OTHER_MACHINES.md  OPTIMIZATION_01_CAPSTONE.md  OPTIMIZATION_02_AHASHMAP.md  PARALLEL_RLIB_SUMMARY.md  PROPOSED_TESTS.md  RLIB_PARALLELIZATION_ANALYSIS.md  baseline-2026-03-23.md  benchmark.sh  benchmark_comparison.md  benchmark_results_Linux-x86_64_20260411_194004.txt  benchmark_results_Linux-x86_64_20260411_194338.txt  benchmark_results_Linux-x86_64_20260411_194552.txt
docs/panics/: JP001-explicit-panic.md  JP002-bounds-check.md  JP003-arithmetic-overflow.md  JP004-shift-overflow.md  JP005-division-by-zero.md  JP006-unwrap-none.md  JP007-unwrap-err.md  JP008-expect-none.md  JP009-expect-err.md  JP010-assert-failed.md  JP011-debug-assert-failed.md  JP012-unreachable.md  JP013-unimplemented.md  JP014-todo.md  JP015-panic-in-drop.md  JP016-cannot-unwind.md  JP017-formatting-error.md  JP018-capacity-overflow.md  JP019-out-of-memory.md  JP021-invalid-enum.md  (+4 more)
jones/: Cargo.toml
jones/src/: args.rs  call_tree.rs  cargo.rs  config.rs  main.rs  panic_cause.rs  sym.rs
jones/tests/: integration_tests.rs  test_allow_panic.toml
jonesy/: Cargo.toml
jonesy/benches/: hot_paths.rs
jonesy/src/: analysis.rs  analysis_cache.rs  arch.rs  args.rs  binary_format.rs  call_graph.rs  call_tree.rs  cargo.rs  config.rs  crate_line_table.rs  debug_info.rs  elf_relocations.rs  file_watcher.rs  full_line_table.rs  function_index.rs  heuristics.rs  html_output.rs  inline_allows.rs  json_output.rs  lib.rs  library_call_graph.rs  lsp.rs  main.rs  object_line_table.rs  panic_cause.rs  project_context.rs  string_tables.rs  sym.rs  text_output.rs
jonesy/src/arch/: aarch64.rs  x86_64.rs
jonesy/src/output/: html.rs  mod.rs  text.rs
jonesy/tests/: integration_tests.rs  lsp_tests.rs  test_called_function_allow.toml  test_deny_drops.toml  test_scoped_rules.toml
(+48 files in other folders)
