[workspace]
resolver = "3"
members = [
    "jonesy",
    "examples/cdylib",
    "examples/dylib",
    "examples/multi_bin",
    "examples/panic",
    "examples/perfect",
    "examples/rlib",
    "examples/staticlib",
]

# Optimize release builds for performance
[profile.release]
lto = "thin"
codegen-units = 1
strip = true
