[workspace]
resolver = "3"
members = [
    "jonesy",
    "examples/cdylib",
    "examples/dylib",
    "examples/inlined",
    "examples/multi_bin",
    "examples/panic",
    "examples/perfect",
    "examples/rlib",
    "examples/simple_panic",
    "examples/staticlib",
    "examples/unwrap_or_default",
]

# Optimize release builds for performance
[profile.release]
lto = "thin"
codegen-units = 1
strip = true

# Profiling build: release optimizations with debug symbols
[profile.profiling]
inherits = "release"
debug = true
strip = false
