[package]
name = "jonesy"
description = "Jonesy is here to help you not panic!"
version = "0.7.12"
edition = "2024"
rust-version = "1.85"
authors = [" Andrew Mackenzie andrew@mackenzie-serres.net"]
repository = "https://github.com/andrewdavidmackenzie/jonesy"
readme = "../README.md"
license = "Apache-2.0"

[[bin]]
name = "jonesy"
path = "src/main.rs"

[dependencies]
ahash = "0.8"
goblin = "0.10.4"
gimli = "0.32.3"
iced-x86 = "1.21"
rustc-demangle = "0.1"
capstone = "0.12"
ouroboros = "0.18"
regex = "1"
cargo_toml = "0.22"
rayon = "1.10"
dashmap = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
is-terminal = "0.4"
url = "2"
indicatif = "0.17"
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
glob = "0.3"
notify = "8"

[dev-dependencies]
wait-timeout = "0.2"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.27.0"

[[bench]]
name = "hot_paths"
harness = false

# Configuration for cargo-binstall
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/jonesy-{ target }.tar.gz"
bin-dir = "jonesy"
pkg-fmt = "tgz"
